examples/recipe-book/index.theme.css
*, *::before, *::after { box-sizing: border-box; }

html {
  scrollbar-gutter: stable;
	overflow-x: auto;
	overflow-y: visible;
}
html.navigating {
  overflow-x: clip;
  overflow-y: scroll;
}
html.navigating body {
  overflow: clip;
	height: 100vh;
}

body {
  font-family:      var(--font-family-base);
  line-height:      var(--line-height);
  color:            var(--color-text);
  background-color: var(--color-bg);
  margin:           0;
  min-height:       100dvh;
}

#app {
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
}

hr {
  border: none;
  border-top: 1px solid var(--color-border);
  margin: 1.5rem 0;
}

